src/test/resources/semantic/declarations/error/TC_ERROR_STRUCT_NO_DEFINIDO3.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 6 | COLUMNA 5 | La estructura 'P' no se encuentra definida. |

struct A{
    P a;
}

impl A{
    .(){}
}

start{

}